--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Bengali, Hindi</span></li>
 									<!-- <li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, Looker &amp; Tableau</span></li> -->
-									<li class="d-flex"><span>Other Skills:</span> <span>Excel, Git, SVN, Google Analytics</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Excel, Git, SVN</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Cooking, Bike Ride, Try new os</span></li>
 									
 								</ul>
