--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 									loves to build neat, cool, and scalable applications that benefit the community and are fun to work on.
 									With a great interest in the open-source community.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Profile:</span> <span>Java, Postgresql, java-script, html, css, hibernate</span></li>
+									<li class="d-flex"><span>Profile:</span> <span>Java, Postgresql, java Script, html, css, hibernate</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Real Estate product</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Bengali, Hindi</span></li>
