--- a/index.html
+++ b/index.html
@@ -160,7 +160,10 @@
 						// Create an array of typing text
 						const typingTexts = [
 						'Engineer  ',
-						'Developer  '
+						'Developer  ',
+						'Full stack',
+						'Web Developer',
+						'Java Developer'
 						
 						];
 
