--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Soumen Pal Portfolio</title>
+	<link rel="icon" href="/images/favicon.ico" type="icon.png" sizes="16x16"
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
