--- a/index.html
+++ b/index.html
@@ -329,21 +329,21 @@
 		<br>
 		
 		<div class="row">
-			<!--	<div class="col-md-6">
+				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2021-Present</span>
-						<h2>Senior Data Analyst</h2>
-						<span class="position">Merkle</span>
-						<p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International. 
+						<span class="date">March, 2024 - Present</span>
+						<h2>System Engineer</h2>
+						<span class="position">Tata Consultancy Services</span>
+						<p class="mt-4">TCS, a global leader in IT services, consulting, and business solutions, leverages technology for business transformation and helps catalyze change. 
 							<ul>
-								<li>Analysed ad campaigns, clickstream, and customer surveys data, identified an increasing demand and launched a strategic product line.</li>
-								<li>Developed time series forecasting models to predict sales and optimize marketing budgets, got model performance of 92%.</li>
-								<li>Designed and executed A/B tests, performed rigorous statistical analysis. Led to 20% MoM increase in the conversion rate.</li>
+								<li>Java-PL/SQL: seamless integration, robust functionality, efficient database operations.</li>
+								<!-- <li>Developed time series forecasting models to predict sales and optimize marketing budgets, got model performance of 92%.</li>
+								<li>Designed and executed A/B tests, performed rigorous statistical analysis. Led to 20% MoM increase in the conversion rate.</li> -->
 							</ul>
 						</p>
 					</div>
 
-				</div>-->
+				</div>
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
