Update project section with enhanced descriptions and better image references

--- a/index.html
+++ b/index.html
@@ -416,33 +416,41 @@
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Projects</h2>
-            <p>Below projects are Completd by me.</p>
+            <h2 class="mb-4">My Projects</h2>
+            <p>Here are some of the projects I've developed using various technologies.</p>
           </div>
         </div>
         <div class="row d-flex">
+          <div class="col-md-4 d-flex ftco-animate">
+          	<div class="blog-entry justify-content-end">
+              <a href="https://github.com/soumen744488/Chess-Game.git" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              </a>
+              <div class="text mt-3 float-right d-block">
+                <h3 class="heading"><a href="https://github.com/soumen744488/Chess-Game.git">Chess Game - Java Spring MVC</a></h3>
+                <p>Full-featured chess game with Spring MVC, WebSocket multiplayer, all piece movements, check/checkmate detection, and responsive web interface.</p>
+              </div>
+            </div>
+          </div>
            <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <a href="https://github.com/soumen744488/rws" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
-
-                <h3 class="heading"><a href="https://www.amazon.com/dp/B08XY5VQKK/ref=apps_sf_sta">Code editor application using Android studio</a></h3>
-                <p>Rws is an android application, by which we can read, write, create, and share any kind of text document.</p>
+                <h3 class="heading"><a href="https://www.amazon.com/dp/B08XY5VQKK/ref=apps_sf_sta">RWS - Android Code Editor</a></h3>
+                <p>Android application for reading, writing, creating, and sharing text documents. Built with Android Studio and published on Amazon App Store.</p>
               </div>
             </div>
-          </div> 
-          <!-- <div class="col-md-4 d-flex ftco-animate">
+          </div>
+          <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
+              <a href="https://github.com/soumen744488/soumen_portfolio.git" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
-
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Data Analysis using Python Project for Beginners</a></h3>
-                <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
+                <h3 class="heading"><a href="https://soumen744488.github.io/soumen_portfolio/">Personal Portfolio Website</a></h3>
+                <p>Responsive portfolio website built with HTML5, CSS3, JavaScript, and SCSS. Features modern design, smooth animations, and mobile optimization.</p>
               </div>
             </div>
-          </div> -->
+          </div>
           <!-- <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
               <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
