--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'Engineer  ',
+						'Vive Coding ',
 						'Developer  ',
 						'Full stack',
 						'Web Developer',
@@ -528,7 +528,7 @@
 	            <p>Kolkata, India</p>
 	          </div>
           </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          <!-- <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
@@ -536,7 +536,7 @@
           		<h3 class="mb-4">Contact Number</h3>
 	            <p><a href="tel://0101010101">+ 91 9679833243</a></p>
 	          </div>
-          </div>
+          </div> -->
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
