Additional updates to typing animation and contact section

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'Vive Coding ',
+						'Vibe coding ',
 						'Developer  ',
 						'Full stack',
 						'Web Developer',
