--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'Vibe coding ',
+						'Vibe coding  ',
 						'Developer  ',
 						'Full stack',
 						'Web Developer',
@@ -225,7 +225,7 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Soumen Pal</span></p>
-										<p><span class="title-s">Job Role: </span> <span>Systems Engineer</span></p>
+										<p><span class="title-s">Job Role: </span> <span>System Engineer</span></p>
 										<p><span class="title-s">Experience: </span> <span>Since May,2022</span></p>
 										<p><span class="title-s">Address: </span> <span>Kolkata, India</span></p>
 									  </div>
@@ -306,7 +306,7 @@
 									and continuously learning emerging technologies.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Full Stack Developer</span></li>
-									<li class="d-flex"><span>Domain:</span> <span>Real Estate & Web Applications</span></li>
+									<li class="d-flex"><span>Domain:</span> <span>Insurence domain Web Applications</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Languages:</span> <span>English, Bengali, Hindi</span></li>
 									<li class="d-flex"><span>Tech Stack:</span> <span>Java, JavaScript, PostgreSQL, HTML, CSS, Hibernate</span></li>
@@ -325,7 +325,7 @@
 									<span class="number" data-number="5">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://www.linkedin.com/in/soumen-pal-19b416233" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://www.tinyurl.com/soumenlinkedin" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
@@ -359,7 +359,7 @@
 						<span class="date">March 2024 - Present</span>
 						<h2>Systems Engineer</h2>
 						<span class="position">Tata Consultancy Services</span>
-						<p class="mt-4">Working at TCS, a global leader in IT services, consulting, and business solutions, contributing to digital transformation initiatives. 
+						<p class="mt-4">Working at TCS at Bancs domain, a global leader in IT services, consulting, and business solutions, contributing to digital transformation initiatives. 
 							<ul>
 								<li>Developed and maintained enterprise applications using Java and PL/SQL with seamless database integration.</li>
 								<li>Implemented robust functionality and optimized database operations for improved performance.</li>
